[package]
name = "rust-raft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-raft = "0.6"
serde = "1"
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
memstore = "0.2"
axum = "0.2"
log = "0.4.0"
env_logger = "0.8.4"